--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,17 @@
 <resources>
     <string name="app_name">MyAppPortfolio</string>
 
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
+
+    <string name="spotify_streamer">SPOTIFY STREAMER</string>
+
+    <string name="scores_app">SCORES APP</string>
+
+    <string name="library_app">LIBRARY APP</string>
+
+    <string name="build_it_bigger">BUILD_IT_BIGGER</string>
+
+    <string name="xyz_reader">XYZ READER</string>
+
+    <string name="capstone">CAPSTONE: MY OWN APP</string>
 </resources>
