--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
 
     <string name="library_app">LIBRARY APP</string>
 
-    <string name="build_it_bigger">BUILD_IT_BIGGER</string>
+    <string name="build_it_bigger">BUILD IT BIGGER</string>
 
     <string name="xyz_reader">XYZ READER</string>
 
